aulas/cap5/sg.tf
resource "aws_security_group" "minha-sg" {
  name   = "minha-sg"
  vpc_id = aws_vpc.minha-vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
